fix mistakes in text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<h2 class="document-title">Education</h2>
 					<div class="education__block">
 						<div class="date education__date">2023</div>
-						<p class="education__text">BSUIR, software engineering</p>
+						<p class="education__text">BSUIR, software engeneering</p>
 					</div>
 					<div class="education__block">
 						<div class="date education__date">2023</div>
@@ -139,11 +139,11 @@
 				<section class="document-section about">
 					<h2 class="document-title">About me</h2>
 					<p class="about__text">
-						Hi! I’m a junior frontend developer. I want to upgrade my skills. In a future i’d like to work in strong team width the extraordinary prodjects. I'd like do beautiful interactive cites.
+						Hi! I’m a junior frontend developer. I want to upgrade my skills. In a future I’d like to work in strong team with the extraordinary projects. I'd like to do beautiful interactive sites.
 					</p>
 				</section>
 				<section class="document-section work">
-					<h2 class="document-title">Work Expirience</h2>
+					<h2 class="document-title">Work Experience</h2>
 					<div class="work__block">
 						<h3 class="work__head">Web-developer</h3>
 						<div class="work__info">
